@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.98 2007/08/15 22:28:22 joerg Exp $
+# $NetBSD: Makefile,v 1.99 2007/08/22 16:43:32 jlam Exp $
 #
 
 COMMENT=	Archivers
@@ -61,7 +61,6 @@ SUBDIR+=	php-zlib
 SUBDIR+=	ppmd
 SUBDIR+=	ppunpack
 SUBDIR+=	rar
-SUBDIR+=	rar-bin
 SUBDIR+=	rox-archive
 SUBDIR+=	ruby-zip
 SUBDIR+=	rzip
