@@ -1,13 +1,0 @@
-RAR is a powerful tool allowing you to manage and control archive
-files.
-
-RAR features include:
-
-*  Highly sophisticated, original compression algorithm
-*  Special compression algorithms optimized for text, audio,
-   graphics data, 32 and 64-bit Intel executables
-*  Better compression than similar tools, using 'solid' archiving
-*  Authenticity verification (registered version only)
-*  Self-extracting archives and volumes (SFX)
-*  Ability to recover physically damaged archives
-*  Locking, password, file order list, file security & more ...
