@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2006/03/03 22:36:09 wiz Exp $
+@comment $NetBSD: PLIST.linux-i386,v 1.1 2007/08/22 16:43:35 jlam Exp $
 bin/rar-bin
 lib/default.sfx
 share/doc/rar-bin/license.txt
